# specs

./: CMakeLists.txt
include/specs/: archetype.hpp  commands.hpp  component.hpp  entity.hpp  query.hpp  world.hpp
include/specs/private/: schedule.hpp  scheduler.hpp  sparse_set.hpp  storage.hpp  system.hpp  worker.hpp  worker_pool.hpp
public/: archetype.ixx  commands.ixx  component.ixx  component_storage.ixx  entity.ixx  macros.hpp  query.ixx  schedule.ixx  scheduler.ixx  sparse_set.ixx  storage.ixx  system.ixx  worker.ixx  world.ixx
src/: allocated_query.hpp  commands.cpp  entity.cpp  schedule.cpp  schedule.ixx  scheduler.cpp  sparse_set.ixx  storage.cpp  worker.cpp  worker_pool.cpp  world.cpp
tests/: main.cpp
